Ensemble de base mini mini pour les articles

--- a/content/sommaire.html
+++ b/content/sommaire.html
@@ -1,3 +1,7 @@
-<h1>sommaire ahah</h1>
-<a href="#" class="bg-test">Test</a>
-<div id="app"></div>
+<div class="wrapper">
+	<article class="article region">
+		<header class="article__header prose">
+			<h1 class="headline_title variant-article measure">Page d’accueil (travail en cours)</h1>
+		</header>
+	</article>
+</div>
