Ajout id_rubrique dans l'env et afficher la rubrique courante dans le menu

--- a/header/dist.html
+++ b/header/dist.html
@@ -2,7 +2,7 @@
 	<div class="site-header__container">
 		[<a class="site-header__logo" href="#URL_SITE_SPIP">(#INCLURE{fond=images/logo-ukraine-combart.svg})</a>]
 		<nav class="site-header__nav">
-			<INCLURE{fond=inclure/menu, identifiant=barrenav}/>
+			<INCLURE{fond=inclure/menu, id_rubrique, identifiant=barrenav}/>
 		</nav>
 	</div>
 </div>
