--- a/inclure/images/logo_article_hero.html
+++ b/inclure/images/logo_article_hero.html
@@ -6,5 +6,7 @@
 			3- Fournir des images de densité 1, 2 et 3.
 		-->
 	]
-	[(#LOGO_ARTICLE|image_recadre{2:1,-,focus}|balise_img{'','article_hero-image'}|adaptive_images{1229})]
+	[<div class="article_hero-image">
+		(#LOGO_ARTICLE|image_recadre{2:1,-,focus}|balise_img{'','xarticle_hero-image'}|adaptive_images{1229})
+	</div>]
 </BOUCLE_logo_article_hero>
