--- a/modeles/file.html
+++ b/modeles/file.html
@@ -52,7 +52,7 @@
         #GET{legende}
       </figure>
       [<div class="spip_doc_action">
-        <a href="(#GET{url})" class="button button-cta button-cta--primary button-cta--icon-left xvariant-button xwith-icon xwith-icon-left xbutton-ripple"[ (#ENV{lien}|?{'',type="#MIME_TYPE"})]>[(#INCLURE{fond=images/icon-download-100.svg, svg=icon icon-download, aria-hidden=true}) ]<span class="button-cta_label"><:uca:cta_telecharger:> <span>[(#TYPE_DOCUMENT)][ - (#TAILLE|taille_en_octets)]</span></span></a>
+        <a href="(#GET{url})" class="button with-icon-left" data-type="primary"[ (#ENV{lien}|?{'',type="#MIME_TYPE"})]>[(#INCLURE{fond=images/icon-download-100.svg, svg=icon icon-download, aria-hidden=true}) ]<span class="button_label"><:uca:cta_telecharger:> <span>[(#TYPE_DOCUMENT)][ - (#TAILLE|taille_en_octets)]</span></span></a>
       </div>]
     </div>
 ]
