Card : animation sur le filet

--- a/inclure/resumes/article_card.html
+++ b/inclure/resumes/article_card.html
@@ -7,7 +7,7 @@
 				<h2><a href="#URL_ARTICLE">#TITRE</a></h2>
 				[<p>(#SOUSTITRE)</p>]
 			</div>
-			<div class="flow">
+			<div class="card_desc flow">
 				[(#DESCRIPTIF|sinon{#INTRODUCTION{200}})]
 				<p class="card_button-more">
 					<a href="#URL_ARTICLE" class="button with-icon-right" data-type="link"><:uca:cta_lire_suite:>[ (#INCLURE{fond=images/icon-arrow-right-32.svg, svg=icon icon-arrow icon-arrow-right, aria-hidden=true})]</a>
