--- a/content/rubrique-newsletters.html
+++ b/content/rubrique-newsletters.html
@@ -1,4 +1,4 @@
-<BOUCLE_rubrique(RUBRIQUES){id_rubrique}>
+<BOUCLE_rubrique_newsletters(RUBRIQUES){id_rubrique}>
 	<div class="wrapper">
 		<INCLURE{fond=inclure/breadcrumb/rubrique, id_rubrique}/>
 	</div>
@@ -11,6 +11,15 @@
 		</header>
 
 		<div class="rubrique_content">
+			[(#REM) <!-- Formulaire d'abonnement -->]
+			<div class="pod pod--banner">
+				<div class="wrapper region">
+					<div class="all-center">
+						<h2>Abonnez-vous</h2>
+						<p>formulaire d'abonnement à ajouter</p>
+					</div>
+				</div>
+			</div>
 
 			<div class="pod region">
 				<div class="wrapper">
@@ -19,4 +28,4 @@
 			</div>
 		</div>
 	</div>
-</BOUCLE_rubrique>
+</BOUCLE_rubrique_newsletters>
