--- a/inclure/images/logo_article_card.html
+++ b/inclure/images/logo_article_card.html
@@ -7,13 +7,13 @@
 			3 col -> max 375px @x2.5 937px
 		-->
 	][(#SET{logo, #LOGO_ARTICLE|image_recadre{2:1,-,focus}|extraire_attribut{src}})]
-	[(#SET{S@1, #GET{logo}|image_reduire{375, 188}|extraire_attribut{src}})]
-	[(#SET{S@2, #GET{logo}|image_reduire{937, 469}|extraire_attribut{src}})]
-	[(#SET{M@1, #GET{logo}|image_reduire{580, 290}|extraire_attribut{src}})]
-	[(#SET{M@2, #GET{logo}|image_reduire{1580, 790}|extraire_attribut{src}})]
+	[(#SET{S@01, #GET{logo}|image_reduire{375, 188}|extraire_attribut{src}})]
+	[(#SET{S@02, #GET{logo}|image_reduire{937, 469}|extraire_attribut{src}})]
+	[(#SET{M@01, #GET{logo}|image_reduire{580, 290}|extraire_attribut{src}})]
+	[(#SET{M@02, #GET{logo}|image_reduire{1580, 790}|extraire_attribut{src}})]
 	[<div class="card_media">
 		<a href="#URL_ARTICLE">
-			<img src="(#GET{S@1})" srcset="[(#GET{S@1}) 375w][, (#GET{M@1}) 580w][, (#GET{S@2}) 937w]" sizes="100vw" width="[(#GET{S@1}|largeur)]" height="[(#GET{S@1}|hauteur)]" alt="" class="no-adapt-img">
+			<img src="(#GET{S@01})" srcset="[(#GET{S@01}) 375w][, (#GET{M@01}) 580w][, (#GET{S@02}) 937w][, (#GET{M@02}) 1580w]" sizes="100vw" width="[(#GET{S@1}|largeur)]" height="[(#GET{S@1}|hauteur)]" alt="" class="no-adapt-img">
 		</a>
 	</div>]
 </BOUCLE_logo_article_card>
