--- a/content/rubrique.html
+++ b/content/rubrique.html
@@ -6,13 +6,12 @@
 		<header class="rubrique_header region">
 			<div class="wrapper flow prose">
 				<h1 class="rubrique_title">#TITRE</h1>
-				[<div class="rubrique_desc flow">(#TEXTE)</div>]
+				[<div class="rubrique_desc text-step-2 flow">(#TEXTE)</div>]
 			</div>
 		</header>
 
 		<div class="rubrique_content">
-
-			<div class="pod region">
+			<div class="pod">
 				<div class="wrapper">
 					<INCLURE{fond=inclure/listes/rubrique_cards_article, id_rubrique, pagination=12, env, ajax} />
 				</div>
