Rubrique marges haute et basse pod et rubrique_content

--- a/content/rubrique-qui.html
+++ b/content/rubrique-qui.html
@@ -11,7 +11,7 @@
 				<h1 class="rubrique_title">#TITRE</h1>
 			</div>
 		</header>
-		<div class="rubrique_content">
+		<div class="rubrique_content gap-top-3 gap-bottom-4">
 			<div class="wrapper">
 				<div class="grid" data-layout="50-50">
 					[<div class="rubrique_desc flow">(#TEXTE)</div>]
