--- a/inclure/resumes/article_card.html
+++ b/inclure/resumes/article_card.html
@@ -1,5 +1,5 @@
 <BOUCLE_article_card(ARTICLES){id_article}>
-	<article class="card">
+	<article class="card"[ data-type="(#ENV{card_type})"]>
 		<INCLURE{fond=inclure/images/logo_article_card, id_article}/>
 		<div class="card_content flow">
 			<div class="card_header">
