--- a/inclure/compositions/article.html
+++ b/inclure/compositions/article.html
@@ -26,9 +26,11 @@
 		[<div class="article_notes grid gap-top-5">
 			(#NOTES)
 		</div>]
-
-		<BOUCLE_si_composition_soutenir(CONDITION){si #COMPOSITION|=={soutenir}}>
-			<INCLURE{fond=inclure/listes/prolonger_article_soutenir, id_article}/>
-		</BOUCLE_si_composition_soutenir>
 	</article>
+
+	<BOUCLE_si_composition_soutenir(CONDITION){si #COMPOSITION|=={soutenir}}>
+		<INCLURE{fond=inclure/listes/prolonger_article_soutenir, id_article}/>
+	</BOUCLE_si_composition_soutenir>
+		<INCLURE{fond=inclure/listes/prolonger_article, id_rubrique, id_article}/>
+	<//B_si_composition_soutenir>
 </BOUCLE_composition_article>
