Ajout site-footer

--- a/footer/dist.html
+++ b/footer/dist.html
@@ -1,1 +1,6 @@
-<!-- footer -->
+<div class="wrapper">
+	<div class="site-footer_container">
+		[<a class="site-footer_logo site-logo" href="#URL_SITE_SPIP">(#INCLURE{fond=images/logo-ukraine-combart.svg})</a>]
+		<INCLURE{fond=inclure/listes/reseaux_sociaux}/>
+	</div>
+</div>
