--- a/header/dist.html
+++ b/header/dist.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
 	<div class="site-header__container">
-		[<a class="site-header__logo" href="#URL_SITE_SPIP">(#INCLURE{fond=images/logo-ukraine-combart.svg})</a>]
+		[<a class="site-header__logo site-logo" href="#URL_SITE_SPIP">(#INCLURE{fond=images/logo-ukraine-combart.svg})</a>]
 		<nav class="site-header__nav">
 			<INCLURE{fond=inclure/menu, id_rubrique, identifiant=barrenav}/>
 		</nav>
