--- a/content/rubrique-newsletters.html
+++ b/content/rubrique-newsletters.html
@@ -13,9 +13,9 @@
 			</div>
 		</header>
 
-		<div class="rubrique_content">
+		<div class="rubrique_content gap-bottom-5">
 			[(#REM) <!-- Formulaire d'abonnement -->]
-			<div class="pod pod--banner region">
+			<div class="pod pod--banner gap-bottom-5">
 				<div class="wrapper">
 					<div class="all-center">
 						<h2>Abonnez-vous</h2>
@@ -24,7 +24,7 @@
 				</div>
 			</div>
 
-			<div class="pod region">
+			<div class="pod">
 				<div class="wrapper">
 					<INCLURE{fond=inclure/listes/rubrique_cards_article_grille, id_rubrique, pagination=12, env, ajax} />
 				</div>
