--- a/content/rubrique.html
+++ b/content/rubrique.html
@@ -1,18 +1,21 @@
 <BOUCLE_rubrique(RUBRIQUES){id_rubrique}>
 	<div class="wrapper">
-		<INCLURE{fond=inclure/breadcrumb/rubrique, id_rubrique}/>
-	</div>
-	<div class="rubrique">
-		<header class="rubrique_header region">
-			<div class="wrapper flow prose">
-				<h1 class="rubrique_title">#TITRE</h1>
-				[<div class="rubrique_desc text-step-2 flow">(#TEXTE)</div>]
-			</div>
-		</header>
+		<BOUCLE_si_logo(CONDITION){si #LOGO_RUBRIQUE|oui}>
+			<INCLURE{fond=inclure/images/logo_objet_hero, id_objet=#ID_RUBRIQUE, objet=rubrique, logo=#LOGO_RUBRIQUE|extraire_attribut{src}}/>
+		</BOUCLE_si_logo>
 
-		<div class="rubrique_content gap-top-4 gap-bottom-4">
-			<div class="pod">
-				<div class="wrapper">
+		<INCLURE{fond=inclure/breadcrumb/rubrique, id_rubrique}/>
+
+		<div class="rubrique">
+			<header class="rubrique_header region">
+				<div class="flow prose">
+					<h1 class="rubrique_title">#TITRE</h1>
+					[<div class="rubrique_desc text-step-2 flow">(#TEXTE)</div>]
+				</div>
+			</header>
+
+			<div class="rubrique_content gap-top-2 gap-bottom-5">
+				<div class="pod">
 					<INCLURE{fond=inclure/listes/rubrique_cards_article_grille, id_rubrique, pagination=12, env, ajax} />
 				</div>
 			</div>
