--- a/body.html
+++ b/body.html
@@ -8,5 +8,15 @@
 	<footer class="site-footer">
 		<INCLURE{fond=footer/#ENV{type-page}, env}/>
 	</footer>
+	[(#REM)
+		<!-- https://alistairshepherd.uk/writing/focus-visible-conditional-polyfill/ -->
+	]<script>
+		try {
+			document.body.querySelector(':focus-visible');
+		} catch (error) {
+			var script = document.createElement('script');
+			script.src = "[(#CHEMIN{dist/js/polyfill/focus-visible.js}|timestamp)]";
+			document.body.appendChild(script);
+		}
+	</script>
 </body>
-<!--  -->
