Composition article-contact

--- a/inclure/listes/reseaux_sociaux.html
+++ b/inclure/listes/reseaux_sociaux.html
@@ -1,8 +1,8 @@
 <div class="social">
 	<ul class="social_list" role="list">
 		[<li>
-			<a href="#">
-				(#FA_ICON{img/fa/solid/at.svg, icon-social, [Contacter (#NOM_SITE_SPIP) par e-mail]})
+			<a href="(#URL_ARTICLE{46})">
+				[(#FA_ICON{img/fa/solid/at.svg, icon-social, [Contacter (#NOM_SITE_SPIP) par e-mail]})]
 			</a>
 		</li>]
 		[<li>
