--- a/inclure/resumes/selection_card.html
+++ b/inclure/resumes/selection_card.html
@@ -1,20 +1,21 @@
 <BOUCLE_actualite(SELECTIONS_CONTENUS){id_selections_contenu}>
-	<div class="card">
-		<div class="card__media"></div>
-		<div class="card__content"></div>
-	</div>
-  <li class="card-news">
-    <div class="card-news_content abstract flow">
-      <h3 class="card-news_heading abstract_heading" data-heading-level="3"><a href="#URL">#TITRE</a></h3>
-      <div class="card-news_desc abstract_desc flow-small">
-        [(#DESCRIPTIF)]
-        <p class="abstract_cta"><a href="#URL" class="button-cta variant-link with-icon with-icon-right"><:fraap_squelettes:cta_suite:>[ (#INCLURE{fond=images/icon-arrow-right-hover-32.svg, svg=icon icon-nav-link, path1=icon-nav-link_path1, path2=icon-nav-link_path2, aria-hidden=true})]</a></p>
-      </div>
-      [<div class="card-news_image">
-        <a href="#URL" aria-label="<:fraap_squelettes:cta_suite:>">
-          (#LOGO_SELECTIONS_CONTENU|image_passe_partout{600,315}|image_reduire{600,315}|image_recadre{600,315,center, '#ffffff'})
-        </a>
-      </div>]
-    </div>
-  </li>
+	[(#SET{heading, #ENV{heading, h3}})]
+	<article class="card"[ data-type="(#ENV{card_type})"]>
+		<INCLURE{fond=inclure/images/logo_selection_card, id_selections_contenu}/>
+		<div class="card_content flow">
+			<div class="card_header">
+				[(#GET{heading}|=={h2}|oui)
+					<h2><a href="#URL">#TITRE</a></h2>
+				][(#GET{heading}|=={h3}|oui)
+					<h3><a href="#URL">#TITRE</a></h3>
+				]
+			</div>
+			<div class="card_desc flow">
+				[(#DESCRIPTIF)]
+				<p class="card_button-more">
+					<a href="#URL" class="button with-icon-right" data-type="link"><:uca:cta_lire_suite:>[ (#INCLURE{fond=images/icon-arrow-right-32.svg, svg=icon icon-arrow icon-arrow-right, aria-hidden=true})]</a>
+				</p>
+			</div>
+		</div>
+	</article>
 </BOUCLE_actualite>
