--- a/content/rubrique-qui.html
+++ b/content/rubrique-qui.html
@@ -21,9 +21,9 @@
 				<BOUCLE_selection_soutenir(SELECTIONS){identifiant=rubrique-qui-soutenir}>
 					<B_contenus_soutenir>
 						<div class="pod pod--banner gap-top-4">
-							<div class="banner-support flow text-center">
-								<h2 class="banner-support_title">#_selection_soutenir:TITRE</h2>
-								[<div class="banner-support_desc">
+							<div class="banner banner--support flow text-center">
+								<h2 class="banner_title">#_selection_soutenir:TITRE</h2>
+								[<div class="banner_desc">
 									(#_selection_soutenir:DESCRIPTIF)
 								</div>]
 								<div class="cluster">
