--- a/content/rubrique-newsletters.html
+++ b/content/rubrique-newsletters.html
@@ -17,8 +17,9 @@
 			[(#REM) <!-- Formulaire d'abonnement -->]
 			<div class="pod pod--banner gap-bottom-5">
 				<div class="wrapper">
-					<div class="all-center">
-						<h2>Abonnez-vous</h2>
+					<div class="banner all-center">
+						<h2 class="banner_title"><:uca:newsletter_bandeau_titre:></h2>
+						<p class="banner_desc"><:uca:newsletter_bandeau_desc:></p>
 						<p>formulaire d'abonnement à ajouter</p>
 					</div>
 				</div>
