Correction syntaxe des classes

--- a/header/dist.html
+++ b/header/dist.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
-	<div class="site-header__container">
-		[<a class="site-header__logo site-logo" href="#URL_SITE_SPIP">(#INCLURE{fond=images/logo-ukraine-combart.svg})</a>]
-		<nav class="site-header__nav">
+	<div class="site-header_container">
+		[<a class="site-header_logo site-logo" href="#URL_SITE_SPIP">(#INCLURE{fond=images/logo-ukraine-combart.svg})</a>]
+		<nav class="site-header_nav">
 			<INCLURE{fond=inclure/menu, id_rubrique, identifiant=barrenav}/>
 		</nav>
 	</div>
