--- a/content/contact.html
+++ b/content/contact.html
@@ -1,3 +1,3 @@
-<BOUCLE_article_contact(ARTICLES){id_article=46}>
+<BOUCLE_article_contact(ARTICLES){page=contact}>
 	<INCLURE{fond=content/article-contact, id_article, env}/>
 </BOUCLE_article_contact>
