Suite #f93634f : identifiant page contact dans le pied de page

--- a/inclure/listes/reseaux_sociaux.html
+++ b/inclure/listes/reseaux_sociaux.html
@@ -1,7 +1,7 @@
 <div class="social">
 	<ul class="social_list" role="list">
 		[<li>
-			<a href="(#URL_ARTICLE{46})">
+			<a href="(#URL_PAGE_UNIQUE{contact})">
 				[(#FA_ICON{img/fa/solid/at.svg, icon-social, [Contacter (#NOM_SITE_SPIP) par e-mail]})]
 			</a>
 		</li>]
