Bandeaux et encadrés dans la même largeur que le reste du site

--- a/inclure/listes/prolonger_article.html
+++ b/inclure/listes/prolonger_article.html
@@ -1,6 +1,6 @@
 <BOUCLE_prolonger_article(ARTICLES){id_article}>
 	<B_articles_lies>
-		<aside class="pod pod--article-related full-bleed">
+		<aside class="pod pod--article-related">
 			<div class="wrapper">
 				<div class="flow">
 					<h2 class="pod_heading"><:uca:prolonger_articles_lies:></h2>
@@ -14,7 +14,7 @@
 		</aside>
 	</B_articles_lies>
 		<B_articles_rubrique>
-			<aside class="pod pod--article-related full-bleed">
+			<aside class="pod pod--article-related">
 				<div class="wrapper">
 					<div class="flow">
 						<h2 class="pod_heading"><:uca:prolonger_articles_rubrique:></h2>
