--- a/inclure/listes/prolonger_article_soutenir.html
+++ b/inclure/listes/prolonger_article_soutenir.html
@@ -1,6 +1,6 @@
 <BOUCLE_prolonger_article_soutenir(ARTICLES){id_article}>
 	<B_articles_lies>
-		<aside class="pod pod--article-related full-bleed">
+		<aside class="pod pod--article-related">
 			<div class="wrapper">
 				<div class="flow">
 					<h2 class="pod_heading"><:uca:prolonger_articles_soutenir{nom=#NOM_SITE_SPIP}:></h2>
