--- a/content/rubrique-newsletters.html
+++ b/content/rubrique-newsletters.html
@@ -4,29 +4,26 @@
 			<INCLURE{fond=inclure/images/logo_objet_hero, id_objet=#ID_RUBRIQUE, objet=rubrique, logo=#LOGO_RUBRIQUE|extraire_attribut{src}}/>
 		</BOUCLE_si_logo>
 		<INCLURE{fond=inclure/breadcrumb/rubrique, id_rubrique}/>
-	</div>
-	<div class="rubrique">
-		<header class="rubrique_header region">
-			<div class="wrapper flow prose">
-				<h1 class="rubrique_title">#TITRE</h1>
-				[<div class="rubrique_desc text-step-2 flow">(#TEXTE)</div>]
-			</div>
-		</header>
 
-		<div class="rubrique_content gap-bottom-5">
-			[(#REM) <!-- Formulaire d'abonnement -->]
-			<div class="pod pod--banner gap-bottom-5">
-				<div class="wrapper">
+		<div class="rubrique">
+			<header class="rubrique_header region">
+				<div class="flow prose">
+					<h1 class="rubrique_title">#TITRE</h1>
+					[<div class="rubrique_desc text-step-2 flow">(#TEXTE)</div>]
+				</div>
+			</header>
+
+			<div class="rubrique_content gap-bottom-5">
+				[(#REM) <!-- Formulaire d'abonnement -->]
+				<div class="pod pod--banner gap-bottom-5">
 					<div class="banner all-center">
 						<h2 class="banner_title"><:uca:newsletter_bandeau_titre:></h2>
 						<p class="banner_desc"><:uca:newsletter_bandeau_desc:></p>
 						<p>formulaire d'abonnement à ajouter</p>
 					</div>
 				</div>
-			</div>
 
-			<div class="pod">
-				<div class="wrapper">
+				<div class="pod">
 					<INCLURE{fond=inclure/listes/rubrique_cards_article_grille, id_rubrique, pagination=12, env, ajax} />
 				</div>
 			</div>
