Fix : styles des boutons

--- a/content/rubrique-qui.html
+++ b/content/rubrique-qui.html
@@ -28,7 +28,7 @@
 								</div>]
 								<div class="cluster">
 									<BOUCLE_contenus_soutenir(SELECTIONS_CONTENUS){id_selection}{par rang}>
-										<a class="button with-icon-right" data-type="[(#COMPTEUR_BOUCLE|alterner{secondary, secondary-reversed})]"  href="#URL">#TITRE[ (#INCLURE{fond=images/icon-arrow-right-32.svg, svg=icon icon-arrow icon-arrow-right, aria-hidden=true})]</a>
+										<a class="button with-icon-right" data-type="[(#COMPTEUR_BOUCLE|alterner{secondary, discreet})]"  href="#URL">#TITRE[ (#INCLURE{fond=images/icon-arrow-right-32.svg, svg=icon icon-arrow icon-arrow-right, aria-hidden=true})]</a>
 									</BOUCLE_contenus_soutenir>
 								</div>
 							</div>
