--- a/content/sommaire.html
+++ b/content/sommaire.html
@@ -31,7 +31,7 @@
 						</div>]
 						<div class="cluster">
 							<BOUCLE_contenus_apropos(SELECTIONS_CONTENUS){id_selection}{par rang}>
-								<a class="button with-icon-right" data-type="[(#COMPTEUR_BOUCLE|alterner{secondary, secondary-reversed})]"  href="#URL">#TITRE[ (#INCLURE{fond=images/icon-arrow-right-32.svg, svg=icon icon-arrow icon-arrow-right, aria-hidden=true})]</a>
+								<a class="button with-icon-right" data-type="[(#COMPTEUR_BOUCLE|alterner{secondary, discreet})]" href="#URL">#TITRE[ (#INCLURE{fond=images/icon-arrow-right-32.svg, svg=icon icon-arrow icon-arrow-right, aria-hidden=true})]</a>
 							</BOUCLE_contenus_apropos>
 						</div>
 					</div>
