Correction css with-sidebar

--- a/content/article-contact.html
+++ b/content/article-contact.html
@@ -9,7 +9,7 @@
 				[<p class="article_subtitle">(#SOUSTITRE)</p>]
 				[<div class="article_desc">(#CHAPO|adaptive_images{800})</div>]
 			</header>
-			<div class="article_content with-sidebar">
+			<div class="article_content with-sidebar" data-type="left-sidebar">
 				<div>
 					[<div class="flow">
 						(#TEXTE|adaptive_images{800}|ancres_sommaire)
