--- a/content/rubrique-newsletters.html
+++ b/content/rubrique-newsletters.html
@@ -16,10 +16,10 @@
 			<div class="rubrique_content gap-bottom-5">
 				[(#REM) <!-- Formulaire d'abonnement -->]
 				<div class="pod pod--banner gap-bottom-5">
-					<div class="banner all-center">
+					<div class="banner banner--subscribe-nl text-center flow">
 						<h2 class="banner_title"><:uca:newsletter_bandeau_titre:></h2>
 						<p class="banner_desc"><:uca:newsletter_bandeau_desc:></p>
-						<p>formulaire d'abonnement à ajouter</p>
+						[(#FORMULAIRE_NEWSLETTER_SUBSCRIBE{uca_sendinblue})]
 					</div>
 				</div>
 
