--- a/content/sommaire.html
+++ b/content/sommaire.html
@@ -54,10 +54,10 @@
 	</BOUCLE_selections_presentation>
 
 	<section class="pod pod--banner gap-bottom-5">
-		<div class="banner text-center">
+		<div class="banner banner--subscribe-nl text-center flow">
 			<h2 class="banner_title"><:uca:newsletter_bandeau_titre:></h2>
 			<p class="banner_desc"><:uca:newsletter_bandeau_desc:></p>
-			<p>Formulaire d'abonnement à ajouter</p>
+			[(#FORMULAIRE_NEWSLETTER_SUBSCRIBE{uca_sendinblue})]
 		</div>
 	</section>
 </div>
