--- a/content/rubrique-newsletters.html
+++ b/content/rubrique-newsletters.html
@@ -17,8 +17,8 @@
 				[(#REM) <!-- Formulaire d'abonnement -->]
 				<div class="pod pod--banner gap-bottom-5">
 					<div class="banner banner--subscribe-nl text-center flow">
-						<h2 class="banner_title"><:uca:newsletter_bandeau_titre:></h2>
-						<p class="banner_desc"><:uca:newsletter_bandeau_desc:></p>
+						<h2 class="banner_title"><:uca:newsletter_bandeau_titre_abonnement:></h2>
+						<p class="banner_desc"><:uca:newsletter_bandeau_desc_abonnement:></p>
 						[(#FORMULAIRE_NEWSLETTER_SUBSCRIBE{uca_sendinblue})]
 					</div>
 				</div>
