Fix sections avec sidebar

--- a/content/sommaire.html
+++ b/content/sommaire.html
@@ -40,7 +40,7 @@
 				<BOUCLE_contenus_presentation(SELECTIONS_CONTENUS){id_selection}{par rang}>
 					<section class="pod pod--presentation">
 						<h2 class="pod_heading"><a href="#URL">#TITRE</a></h2>
-						<div class="with-sidebar">
+						<div class="with-sidebar" data-type="left-sidebar">
 							[<div class="pod_desc flow">
 								(#DESCRIPTIF)
 								<p class="card_button-more"><a href="#URL" class="button with-icon-right" data-type="link"><:uca:cta_lire_suite:>[ (#INCLURE{fond=images/icon-arrow-right-32.svg, svg=icon icon-arrow icon-arrow-right, aria-hidden=true})]</a></p>
