fix: pagination de la rubrique

--- a/content/rubrique.html
+++ b/content/rubrique.html
@@ -16,7 +16,7 @@
 
 			<div class="rubrique_content gap-top-2 gap-bottom-5">
 				<div class="pod">
-					<INCLURE{fond=inclure/listes/rubrique_cards_article_grille, id_rubrique, pagination=12, env, ajax} />
+					<INCLURE{fond=inclure/listes/rubrique_cards_article_grille, id_rubrique, pagination=#ENV{pagination,12}, env, ajax} />
 				</div>
 			</div>
 		</div>
