fix: retirer le dépendance au plugin sommaire
Le plugin est inutilisable avec les corrections introduites au commit 7d68195. Les liens sur les intertitres ne sont pas essentiels, on supprime

--- a/content/article-contact.html
+++ b/content/article-contact.html
@@ -12,7 +12,7 @@
 			<div class="article_content with-sidebar" data-type="left-sidebar">
 				<div>
 					[<div class="flow">
-						(#TEXTE|adaptive_images{800}|ancres_sommaire)
+						(#TEXTE|adaptive_images{800})
 					</div>]
 					<BOUCLE_documents(DOCUMENTS){id_article}{vu=non}{media=file}{0,1}>
 						<INCLURE{fond=inclure/listes/article_documents_fichiers, id_article}/>
