--- a/inclure/compositions/article.html
+++ b/inclure/compositions/article.html
@@ -13,7 +13,7 @@
 		</header>
 		<div class="article_content flow">
 			[<div class="flow">
-				(#TEXTE|adaptive_images{800}|ancres_sommaire)
+				(#TEXTE|adaptive_images{800})
 			</div>]
 		</div>
 		<BOUCLE_documents(DOCUMENTS){id_article}{vu=non}{media=file}{0,1}>
